--- a/_quarto.yml
+++ b/_quarto.yml
@@ -5,7 +5,7 @@ project:
 website:
   title: "Your Name - Data Science Portfolio"
   description: "A showcase of my data science projects and learning journey"
-  
+
   navbar:
     background: primary
     left:
@@ -42,6 +42,6 @@ format:
   html:
     theme: cosmo
     toc: true
-    code-fold: true
+    code-fold: false
     code-tools: true
     css: styles.css
